<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/android" />
    
    <EditText 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:hint="@string/email"/>
    
    <Button 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:text="@string/ok" />
    
    <CheckBox 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:text="@string/anexarArquivo" />
    
    <ToggleButton 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:textOn="@string/wifi_habilitado"
        android:textOff="@string/wifi_desabilitado"/>
    
    <RadioButton 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:text="@string/android" />
    
    <RadioButton 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:text="@string/ios" />
    
    <Spinner 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:prompt="@string/selecione_seu_sistema" 
        android:entries="@array/sistemasMobile"/>

</LinearLayout>